# Grimora

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  archive_store.py  cache.py  config.py  database.py  models.py  parser.py  text.py  utils.py
static/: gg_sans.css  main.css  search.css  transcript.css  upload.css
templates/: index.html  mention.html  message_contents.html  search.html  transcript.html  transcript_contents.html  twemoji.html  upload.html
